--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,8 @@ body{
 nav{
     display: flex;
     justify-content:space-between;
+    align-items: center;
+    margin: 0 200px;
 }
 .nav-title{
 color: #181818;
@@ -37,4 +39,16 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* header styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding:30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 350px;
 }
