--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,4 +81,38 @@ nav a{
     line-height: 30px;
 }
 /* main section styles */
+main{
+    width: 1140px;
+    margin:0 auto;
+    
+}
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    display: flex;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
 /* about section styels */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #fae5d6;
+    margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+    margin-top: 10px;
+    padding-top: 10px;
+}
