--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -116,3 +116,14 @@ main{
     margin-top: 10px;
     padding-top: 10px;
 }
+/* Skills styles */
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+}
+.skill{
+    padding: 30px;
+    gap: 24px;
+}
