--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -83,8 +83,10 @@ nav a{
 /* main section styles */
 main{
     width: 1140px;
-    margin:0 auto;
-    
+    margin:0 auto;  
+}
+main section{
+    margin-top: 130px;
 }
 .section-title{
     color: #181818;
@@ -122,8 +124,20 @@ main{
 }
 .skills-container{
     display: flex;
+    gap: 24px;
 }
 .skill{
     padding: 30px;
-    gap: 24px;
+    border-radius: 5px;
+    background: #fff8f3;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color: #757575;
+}
+/* Resume-section-title */
+.resume-column-title{
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
