--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -136,8 +136,36 @@ main section{
     color: #757575;
 }
 /* Resume-section-title */
+.section-title{
+    padding-bottom: 30px;
+}
 .resume-column-title{
     color:#474747;
     font-size: 30px;
     font-weight: 700;
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-title{
+    color:#1c1b1b;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-institute,
+.resume-item-description{
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.download-cv{
+    text-align: center;
+   margin-top: 50px;
 }
