basic footer added

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -169,3 +169,10 @@ main section{
     text-align: center;
    margin-top: 50px;
 }
+/* footer styles */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 80px;
+    padding: 130px 200px;
+}
