--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
 /* common shared styles */
 body{
     font-family: 'Open Sans', sans-serif;
@@ -47,9 +43,9 @@ nav a{
 /* header styles */
 .header{
     background-color: #FFF8F3;
-    background-image: url("../images/header_bg.png");
+    background-image: url("../images/header_bg.png"),url("../images/developer.png");
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right,top left;
 }
 .banner{
     padding:30px 30px 0px 150px;
